fix build warnings